--- a/server/Makefile
+++ b/server/Makefile
@@ -5,7 +5,7 @@
 ## Login   <arthur.josso@epitech.eu>
 ## 
 ## Started on  Tue Jun  6 13:53:16 2017 Arthur Josso
-## Last update Tue Jun  6 15:43:43 2017 Arthur Josso
+## Last update Tue Jun  6 16:25:16 2017 Arthur Josso
 ##
 
 NAME	=	zappy_server
@@ -14,7 +14,7 @@ CC	=	gcc -g
 
 INC	=	./inc/
 
-CFLAGS	+=	-I$(INC)		\
+CFLAGS	+=	-I$(INC)	\
 		-Wall -Wextra
 
 LDFLAGS	+=
@@ -23,14 +23,21 @@ SRC		=	./src/
 
 SRC_UTILS	=	$(SRC)utils/
 
+SRC_CORE	=	$(SRC)core/
+
 SRCS	=	$(SRC)main.c			\
 		$(SRC)parse_arg.c		\
-		$(SRC)run.c			\
 		$(SRC_UTILS)alloc.c		\
 		$(SRC_UTILS)cleaner.c		\
 		$(SRC_UTILS)cleaner_utils.c	\
 		$(SRC_UTILS)error.c		\
-		$(SRC_UTILS)string.c
+		$(SRC_UTILS)string.c		\
+		$(SRC_CORE)run.c		\
+		$(SRC_CORE)client_init.c	\
+		$(SRC_CORE)client_io.c		\
+		$(SRC_CORE)client_manager.c	\
+		$(SRC_CORE)fd_list.c		\
+		$(SRC_CORE)init.c
 
 OBJS	=	$(SRCS:.c=.o)
 
