--- a/client/Makefile
+++ b/client/Makefile
@@ -1,11 +1,11 @@
 ##
-## Makefile for lol in /home/tetra/rendu/psu/PSU_2016_zappy
+## Makefile for lol in /client/
 ##
 ## Made by Arthur Josso
 ## Login   <arthur.josso@epitech.eu>
 ##
 ## Started on  Tue Jun  6 13:53:16 2017 Arthur Josso
-## Last update Tue Jun 13 17:16:02 2017 Paskal Arzel
+## Last update Fri Jun 16 14:28:42 2017 Frederic Oddou
 ##
 
 NAME	=	zappy_ai
@@ -20,9 +20,23 @@ CFLAGS	+=	-I$(INC)		\
 LDFLAGS	+=
 
 SRC	=	./src/
+PARSE	=	$(SRC)parse/
+UTILS	=	$(SRC)utils/
+CONNECT	=	$(SRC)connect/
+CMD	=	$(SRC)commands/
 
-SRCS	=	$(SRC)main.c \
-			$(SRC)help.c
+SRCS	=	$(SRC)main.c			\
+		$(UTILS)checker.c		\
+		$(PARSE)parse.c			\
+		$(PARSE)funcs.c			\
+		$(CONNECT)open_socket.c		\
+		$(CONNECT)get_player.c		\
+		$(CONNECT)send_msg.c		\
+		$(CONNECT)receive_msg.c		\
+		$(CMD)player_forward.c		\
+		$(CMD)player_broadcast.c	\
+		$(CMD)player_left.c		\
+		$(CMD)player_right.c
 
 OBJS	=	$(SRCS:.c=.o)
 
