--- a/client/Makefile
+++ b/client/Makefile
@@ -5,12 +5,12 @@
 ## Login   <arthur.josso@epitech.eu>
 ##
 ## Started on  Tue Jun  6 13:53:16 2017 Arthur Josso
-## Last update Mon Jun 26 14:43:02 2017 Paskal Arzel
+## Last update Tue Jun 27 23:20:53 2017 Frederic Oddou
 ##
 
 NAME	=	zappy_ai
 
-CC	=	gcc
+CC	=	gcc -g
 
 INC	=	./inc/
 
@@ -22,13 +22,15 @@ LDFLAGS	+= -lm
 SRC	=	./src/
 PARSE	=	$(SRC)parse/
 UTILS	=	$(SRC)utils/
+QUEUE	=	$(UTILS)queue/
 CONNECT	=	$(SRC)connect/
 CMD	=	$(SRC)commands/
 GAME	=	$(SRC)game/
-IA = $(SRC)ia/
-IA_INIT = $(IA)init/
+IA	= 	$(SRC)ia/
+IA_INIT = 	$(IA)init/
 
 SRCS	=	$(SRC)main.c			\
+		$(SRC)core.c			\
 		$(UTILS)checker.c		\
 		$(UTILS)trim.c			\
 		$(UTILS)strtok_single.c		\
@@ -36,6 +38,9 @@ SRCS	=	$(SRC)main.c			\
 		$(UTILS)get_objects_type.c	\
 		$(UTILS)is_object.c		\
 		$(UTILS)debug.c			\
+		$(QUEUE)queue_class.c		\
+		$(QUEUE)queue_get.c		\
+		$(QUEUE)queue_insert.c		\
 		$(PARSE)parse.c			\
 		$(PARSE)funcs.c			\
 		$(CONNECT)open_socket.c		\
@@ -55,12 +60,12 @@ SRCS	=	$(SRC)main.c			\
 		$(CMD)player_take.c		\
 		$(CMD)player_set.c		\
 		$(CMD)player_look.c		\
-		$(IA)ia_main.c		\
+		$(IA)ia_main.c			\
 		$(IA)check_mom.c		\
-		$(IA)look.c		\
-		$(IA)set_rush.c \
-		$(IA)set_minimap.c \
-		$(IA)select_elem.c \
+		$(IA)look.c			\
+		$(IA)set_rush.c 		\
+		$(IA)set_minimap.c 		\
+		$(IA)select_elem.c 		\
 		$(GAME)elevation.c
 
 OBJS	=	$(SRCS:.c=.o)
