--- a/client/Makefile
+++ b/client/Makefile
@@ -5,7 +5,7 @@
 ## Login   <arthur.josso@epitech.eu>
 ##
 ## Started on  Tue Jun  6 13:53:16 2017 Arthur Josso
-## Last update Wed Jun 28 14:47:28 2017 Paskal Arzel
+## Last update Thu Jun 29 16:23:54 2017 Paskal Arzel
 ##
 
 NAME	=	zappy_ai
@@ -67,6 +67,7 @@ SRCS	=	$(SRC)main.c			\
 		$(IA)set_rush.c \
 		$(IA)set_minimap.c \
 		$(IA)select_elem.c \
+		$(IA)case_analysis.c \
 		$(IA)loot_case.c \
 		$(IA)move.c \
 		$(IA)elevate.c \
